# lantransfer

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  build_executable.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-package.yml
filemanager/: settings.py  urls.py
files/: admin.py  forms.py  models.py  urls.py  views.py
files/migrations/: 0001_initial.py
files/static/files/css/: style.css
files/static/files/js/: main.js
files/templates/files/: admin_dashboard.html  admin_files.html  admin_logs.html  base.html  confirm_delete.html  confirm_delete_category.html  home.html  login.html  manage_categories.html  my_files.html  register.html  upload.html
