[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lantransfer"
version = "0.1.0"
authors = [
    {name = "Hussein Yehya", email = "your-email@example.com"},
]
description = "نظام نقل ملفات عبر الشبكة المحلية (LAN) مع إدارة المستخدمين والصلاحيات"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

[project.urls]
"Homepage" = "https://github.com/Husseinyehya1853/lantransfer"
"Bug Tracker" = "https://github.com/Husseinyehya1853/lantransfer/issues"